fix(opponent): dynamic teamstyle broken due to gap in width breakpoints (#7675)
* adjust width checks

* adjust width breakpoints

--- a/stylesheets/commons/Brackets.scss
+++ b/stylesheets/commons/Brackets.scss
@@ -1216,13 +1216,13 @@ div.brkts-popup-body-element-thumbs {
 			> .team-name-dynamic {
 				content: none;
 
-				@container block-team-name ( min-width: 15px ) and ( max-width: 109px ) {
+				@container block-team-name ( min-width: 15px ) and ( width < 100px ) {
 					&::before {
 						content: attr( data-team-shortname );
 					}
 				}
 
-				@container block-team-name ( min-width: 110px ) and ( max-width: 179px ) {
+				@container block-team-name ( min-width: 100px ) and ( width < 180px ) {
 					&::before {
 						content: attr( data-team-bracketname );
 					}
